--- a/public/piano_helper.css
+++ b/public/piano_helper.css
@@ -13,11 +13,6 @@ h2 {
     border-bottom: 2px solid cornflowerblue;
 }
 
-h3 {
-    padding:0.2 rem;
-    border-bottom: 1px solid cornflowerblue;
-}
-
 pre, code {
     margin-top:0.1 rem;
     background-color: whitesmoke;
@@ -27,5 +22,5 @@ pre, code {
 }
 
 li {
-    font-size: xx-small;
+    font-size: x-small;
 }
